--- a/libs/books/feature/src/lib/book-search/book-search.component.html
+++ b/libs/books/feature/src/lib/book-search/book-search.component.html
@@ -33,6 +33,7 @@
           <div>
             <button
               mat-flat-button
+              data-testing="add-book-to-reading-list"
               color="primary"
               (click)="addBookToReadingList(b)"
               [disabled]="b.isAdded"
