Task 4: Ability to mark a book as finished

--- a/libs/books/feature/src/lib/book-search/book-search.component.html
+++ b/libs/books/feature/src/lib/book-search/book-search.component.html
@@ -33,11 +33,12 @@
           <div>
             <button
               mat-flat-button
+              data-testing="add-book-to-reading-list"
               color="primary"
               (click)="addBookToReadingList(b)"
               [disabled]="b.isAdded"
             >
-              Want to Read
+              {{ b.finished ? 'Finished' : 'Want to Read' }}
             </button>
           </div>
         </div>
