--- a/libs/shared/frame/src/lib/frame.component.html
+++ b/libs/shared/frame/src/lib/frame.component.html
@@ -2,7 +2,7 @@
   <mat-drawer-content>
     <header class="header">
       <div class="header--content">
-        <h1>okreads</h1>
+        <h1 style="cursor: pointer" routerLink="/">okreads</h1>
         <div>
           <button
             data-testing="toggle-reading-list"
